--- a/RestrictingOperatorsApp/RestrictingOperatorsApp.csproj
+++ b/RestrictingOperatorsApp/RestrictingOperatorsApp.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TakeUntilApp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
