Add pass the state + a sort of cancellation

--- a/ConcurrencyApp/ConcurrencyApp.csproj
+++ b/ConcurrencyApp/ConcurrencyApp.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B5DF2476-5FB5-4EE9-ACC2-5AC76803D478}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConcurrencyApp</RootNamespace>
     <AssemblyName>ConcurrencyApp</AssemblyName>
